Revision history for {{$dist->name}}

{{$NEXT}}

0.50      2013-07-22 06:32:26 America/New_York
  - bump version of Test::Clustericious::Cluster

0.49      2013-07-22 05:08:41 America/New_York
  - update to latest versions of my distros

0.48      2013-07-19 16:27:01 America/New_York

0.47      2013-07-18 11:32:06 America/New_York
  - update to latest versions of my distros

0.46      2013-07-08 09:02:46 America/New_York
  - Bumped plicease owned modules up to latest versions
  - Yars and Test::Strict are now installable on Cygwin
  - updated WebService::LiveJournal to latest

0.45      2013-06-16 12:58:21 America/New_York
  - updated WebService::LiveJournal to latest

0.44      2013-06-14 16:12:31 EST5EDT
  - updated Clustericious to latest

0.43      2013-06-14 14:43:58 EST5EDT
  - updated Plicease dists to latest

0.42      2013-06-08 09:26:21 America/New_York
  - add WebService::LiveJournal

0.41      2013-06-07 14:49:22 EST5EDT
  - use [Author::Plicease::UploadToMatrix] instead of [Run::AfterRelease]

0.40      2013-06-07 14:28:12 EST5EDT
  - use perl in path for upload

0.39      2013-06-07 14:26:04 EST5EDT
  - automatically upload to dist.wdlabs.com after release

0.38      2013-05-30 17:37:18 America/New_York
  - install Clustericious + PlugAuth on MSWin32 (now that it is supported)
  - added PlugAuth::Plugin::Finger

0.37      2013-05-30 14:36:57 America/New_York
  - rm HTML::Barcode::QRCode
  - added PlugAuth and family

0.36      2013-05-30 14:22:04 America/New_York
  - added Yars
  - added PlugAuth::Client::Tiny
  - added PlugAuth::Lite
  - added Authen::Simple::PlugAuth

0.35      2013-01-27 21:04:21 America/New_York
  - added File::Listing
  - added File::Listing::Ftpcopy
  - added AnyEvent::Finger
  - added HTML::Barcode::QRCode

0.34      2013-01-18 18:24:49 America/New_York
  - rm Mojolicious::Plugin::Gravatar

0.33      2013-01-18 18:16:19 America/New_York
  - added local::lib
  - added Mojolicious::Plugin::Gravatar
