@@ -68,6 +68,10 @@ Clustericious
 
 =item *
 
+Clustericious::Admin
+
+=item *
+
 Clustericious::Client
 
 =item *
@@ -81,10 +85,6 @@ Clustericious::Log
 =item *
 
 Crypt::PasswdMD5
-
-=item *
-
-Data::Downloader
 
 =item *
 
