@@ -27,10 +27,11 @@ remove = strict
 [Prereqs]
 AnyEvent::Finger                               = 0.07
 AnyEvent::Ident                                = 0.05
-AnyEvent::Open3::Simple                        = 0.67
+AnyEvent::Open3::Simple                        = 0.68
 App::RegexFileUtils                            = 0.05
 Authen::Simple::PlugAuth                       = 0.01
 Clustericious                                  = 0.9929
+Clustericious::Admin                           = 0.23
 Clustericious::Client                          = 0.82
 Clustericious::Config                          = 0.25
 Clustericious::Log                             = 0.14
@@ -38,23 +39,23 @@ File::Listing::Ftpcopy                         = 0.04
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.01
 Mojolicious::Plugin::Ident                     = 0.29
-Mojolicious::Plugin::TtRenderer                = 1.46
-PlugAuth                                       = 0.22
+Mojolicious::Plugin::TtRenderer                = 1.50
+PlugAuth                                       = 0.23
 PlugAuth::Client                               = 0.20
 PlugAuth::Client::Tiny                         = 0.01
 PlugAuth::Lite                                 = 0.05
 PlugAuth::Plugin::Audit                        = 0.05
 PlugAuth::Plugin::DBIAuth                      = 0.03
 PlugAuth::Plugin::Finger                       = 0.01
-PlugAuth::Plugin::LDAP                         = 0.04
+PlugAuth::Plugin::LDAP                         = 0.05
 Shell::Config::Generate                        = 0.08
 Shell::Guess                                   = 0.01
 Test::Clustericious::Cluster                   = 0.09
-Test::Fixme                                    = 0.09
+Test::Fixme                                    = 0.10
 WebService::LiveJournal                        = 0.06
 WebService::TwitterBootstrap::Download::Custom = 0.01
 Yars                                           = 0.88
-Yars::Client                                   = 0.88
+Yars::Client                                   = 0.91
 
 AnyEvent                                       = 0
 App::Ack                                       = 0
@@ -62,7 +63,6 @@ App::cpanminus                                 = 0
 Authen::Simple                                 = 0
 autodie                                        = 0
 Crypt::PasswdMD5                               = 0
-Data::Downloader                               = 0
 DBD::mysqlPP                                   = 0
 DBD::PgPP                                      = 0
 DBD::SQLite                                    = 0
@@ -141,13 +141,11 @@ YAML::XS                                       = 0
 ; Validate::Tiny
 
 [Author::Plicease::OSPrereqsNot / MSWin32]
-Data::Downloader                               = 0
 AnyEvent::Open3::Simple                        = 0
 Sereal::Encoder                                = 0
 Yars                                           = 0
 
 [Author::Plicease::OSPrereqsNot / cygwin]
-Data::Downloader                               = 0
 
 [Run::BeforeBuild]
 run = tools/podfixup
